--- a/index.html
+++ b/index.html
@@ -14,23 +14,48 @@
         <div class="calculator">
           <p>
             Ваша ставка
-            <input id="salary" type="number" placeholder="20000 р." />
+            <input
+              class="enter"
+              id="salary"
+              type="number"
+              placeholder="20000 р."
+            />
           </p>
           <p>
             Рабочие часы <b>общие</b>
-            <input id="workTime" type="number" placeholder="159 ч." />
+            <input
+              class="enter"
+              id="workTime"
+              type="number"
+              placeholder="159 ч."
+            />
           </p>
           <p>
             Рабочие часы <b>ночные/выходные</b>
-            <input id="wikendTime" type="number" placeholder="5 ч." />
+            <input
+              class="enter"
+              id="wikendTime"
+              type="number"
+              placeholder="5 ч."
+            />
           </p>
           <p>
             Часов в месяце
-            <input id="monthTime" type="number" placeholder="150 ч." />
+            <input
+              class="enter"
+              id="monthTime"
+              type="number"
+              placeholder="150 ч."
+            />
           </p>
           <p>
             Кол-во бонусов
-            <input id="bonusCount" type="number" placeholder="2 шт." />
+            <input
+              class="enter"
+              id="bonusCount"
+              type="number"
+              placeholder="2 шт."
+            />
           </p>
           <p>
             <input
