--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           </p>
           <p>
             <input
-              id="resultButton"
+              class="resultButton"
               onclick="calc()"
               type="button"
               value="Расчитать"
