--- a/index.html
+++ b/index.html
@@ -22,7 +22,15 @@
             />
           </p>
           <p>
-            Рабочие часы <b>общие</b>
+            <a class="help" href="#"
+              ><img
+                class="questionIco"
+                src="./assets/images/question.png"
+                alt="подсказка"
+              /><span class="airhelp">С вычетом обедов!</span>
+            </a>
+            Рабочие часы
+            <b>общие</b>
             <input
               class="enter"
               id="workTime"
