--- a/index.html
+++ b/index.html
@@ -50,13 +50,18 @@
           <p>
             Рабочий месяц
             <select id="monthSelect" onchange="changeMonth()" size="1">
+              <option value="120">Январь</option>
+              <option value="151">Февраль</option>
+              <option value="176">Март</option>
+              <option value="175">Апрель</option>
+              <option value="152">Май</option>
               <option value="167">Июнь</option>
-              <option value="184">Июль</option>
-              <option value="168">Август</option>
+              <option value="176">Июль</option>
+              <option value="176">Август</option>
               <option value="176">Сентябрь</option>
-              <option value="176">Октябрь</option>
+              <option value="168">Октябрь</option>
               <option value="159">Ноябрь</option>
-              <option value="183">Декабрь</option>
+              <option value="176">Декабрь</option>
             </select>
             <input
               readonly
@@ -64,7 +69,7 @@
               id="monthTime"
               type="number"
               placeholder="150 ч."
-              value="167"
+              value="120"
             />
           </p>
           <p>
