--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
             </p>
           </div>
           <div class="entercontainer">
-            <p id="result">Итого ≈ 0 рублей</p>
+            <p id="result"> 0 руб.</p>
           </div>
         </div>
 
