--- a/index.html
+++ b/index.html
@@ -123,7 +123,9 @@
             <p id="result"> 0 руб.</p>
           </div>
         </div>
-
+        </div>
+      </div>
+    </div>
     <script src="calculate.js"></script>
   </body>
 </html>
