--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
           <div class="namespace">
             <p>Рабочий месяц</p>
             <select class="monthSelector" id="monthSelect" onchange="changeMonth()" size="1">
+              <option value="176">Декабрь 2022</option>
               <option value="136">Январь</option>
               <option value="143">Февраль</option>
               <option value="175">Март</option>
@@ -78,7 +79,7 @@
               <option value="168">Сентябрь</option>
               <option value="176">Октябрь</option>
               <option value="167">Ноябрь</option>
-              <option value="176">Декабрь</option>
+              <option value="168">Декабрь</option>
             </select>
           </div>
           <div class="entercontainer">
@@ -89,7 +90,7 @@
               id="monthTime"
               type="number"
               placeholder="150 ч."
-              value="128"
+              value="176"
             />
           </div>
         </div>
